tests/NormalTests/paczka1/small_fuzzy/99387073.err
Error in line 5: sYfaoSmDR S125 31,6
Error in line 15: 80HdqK S553 59,5
